feat: add transaction categories count filtered by dates
