# src/main/java/app/bpartners/api/model/mapper/TransactionCategoryMapper.java
@@ -2,9 +2,11 @@ package app.bpartners.api.model.mapper;
 
 import app.bpartners.api.model.TransactionCategory;
 import app.bpartners.api.model.TransactionCategoryTemplate;
+import app.bpartners.api.repository.jpa.TransactionCategoryJpaRepository;
 import app.bpartners.api.repository.jpa.TransactionCategoryTemplateJpaRepository;
 import app.bpartners.api.repository.jpa.model.HTransactionCategory;
 import app.bpartners.api.repository.jpa.model.HTransactionCategoryTemplate;
+import java.time.LocalDate;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Component;
 
@@ -12,8 +14,11 @@ import org.springframework.stereotype.Component;
 @AllArgsConstructor
 public class TransactionCategoryMapper {
   private final TransactionCategoryTemplateJpaRepository templateJpaRepository;
+  private final TransactionCategoryJpaRepository jpaRepository;
 
-  public TransactionCategory toDomain(HTransactionCategory entity) {
+  //TODO: rename the from/to variables to be more explicit
+  public TransactionCategory toDomain(HTransactionCategory entity, LocalDate from,
+                                      LocalDate to) {
     TransactionCategory domain = TransactionCategory.builder()
         .id(entity.getId())
         .idAccount(entity.getIdAccount())
@@ -27,6 +32,12 @@ public class TransactionCategoryMapper {
       domain.setType(categoryTemplate.getType());
       domain.setVat(categoryTemplate.getVat());
     }
+    String typeOrIdTmpl =
+        entity.getType() != null ? entity.getType() : entity.getIdCategoryTemplate();
+    Long typeCount = jpaRepository.countByCriteria(domain.getIdAccount(), typeOrIdTmpl,
+        from.atStartOfDay(),
+        to.plusDays(1).atStartOfDay().minusSeconds(1));
+    domain.setTypeCount(typeCount);
     return domain;
   }
 
