# src/main/java/app/bpartners/api/repository/TransactionCategoryRepository.java
@@ -1,14 +1,17 @@
 package app.bpartners.api.repository;
 
 import app.bpartners.api.model.TransactionCategory;
+import java.time.LocalDate;
 import java.util.List;
 
 public interface TransactionCategoryRepository {
-
+  //TODO: rename the from/to variables to be more explicit
   List<TransactionCategory> findByIdAccountAndUserDefined(String idAccount, boolean unique,
-                                                          boolean userDefined);
+                                                          boolean userDefined, LocalDate from,
+                                                          LocalDate to);
 
-  List<TransactionCategory> findByAccount(String idAccount, boolean unique);
+  List<TransactionCategory> findByAccount(String idAccount, boolean unique, LocalDate from,
+                                          LocalDate to);
 
   List<TransactionCategory> saveAll(List<TransactionCategory> toCreate);
 
