# src/main/java/app/bpartners/api/repository/jpa/TransactionCategoryJpaRepository.java
@@ -1,6 +1,7 @@
 package app.bpartners.api.repository.jpa;
 
 import app.bpartners.api.repository.jpa.model.HTransactionCategory;
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 import org.springframework.data.jpa.repository.JpaRepository;
@@ -27,4 +28,18 @@ public interface TransactionCategoryJpaRepository
 
   List<HTransactionCategory> findAllByIdAccount(String idAccount);
 
+  /*
+   * counts by type and idAccount
+   * if type is null,
+   * it checks the id_transaction_category_tmpl.
+   */
+  @Query(value =
+      "select count(tc.*) from \"transaction_category\" tc "
+          + "where tc.id_account = ?1 "
+          + "and (tc.id_transaction_category_tmpl is null "
+          + "and tc.type = ?2 ) "
+          + "or (tc.type is null and tc.id_transaction_category_tmpl = ?2) "
+          + "and tc.created_datetime between ?3 and ?4 ",
+      nativeQuery = true)
+  Long countByCriteria(String idAccount, String typeOrIdTmpl, LocalDateTime from, LocalDateTime to);
 }
