# src/main/java/app/bpartners/api/service/TransactionCategoryService.java
@@ -2,6 +2,7 @@ package app.bpartners.api.service;
 
 import app.bpartners.api.model.TransactionCategory;
 import app.bpartners.api.repository.TransactionCategoryRepository;
+import java.time.LocalDate;
 import java.util.List;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -11,15 +12,22 @@ import org.springframework.stereotype.Service;
 public class TransactionCategoryService {
   private final TransactionCategoryRepository repository;
 
+  //TODO: rename the from/to variables to be more explicit
 
   public List<TransactionCategory> getCategoriesByAccountAndUserDefined(
       String idAccount, boolean unique,
-      boolean userDefined) {
-    return repository.findByIdAccountAndUserDefined(idAccount, unique, userDefined);
+      boolean userDefined,
+      String from,
+      String to) {
+    return repository.findByIdAccountAndUserDefined(idAccount, unique, userDefined,
+        LocalDate.parse(from), LocalDate.parse(to));
   }
 
-  public List<TransactionCategory> getCategoriesByAccount(String idAccount, boolean unique) {
-    return repository.findByAccount(idAccount, unique);
+  public List<TransactionCategory> getCategoriesByAccount(
+      String idAccount, boolean unique,
+      String from, String to) {
+    return repository.findByAccount(idAccount, unique, LocalDate.parse(from),
+        LocalDate.parse(to));
   }
 
   public List<TransactionCategory> createCategories(
